# gotify_pc_tauri

./: .gitignore  ARCHITECTURE.md  README.md  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: tauri-build.cmd  tauri-dev.cmd
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: defaultapp_b64.txt
src-tauri/src/: lib.rs  main.rs  models.rs  storage.rs
src/components/: CustomToast.tsx  MessageCard.tsx  SettingsModal.tsx
src/lib/: desktop.ts  gotify-client.ts  theme.ts  types.ts
