[package]
name = "gotify_tauri"
version = "0.1.0"
description = "Gotify desktop client rebuilt with React and Tauri"
authors = ["Codex"]
edition = "2021"

[lib]
name = "gotify_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"

